--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ margin: 30px;
 .skill-img {
   width: 30%;
   min-width: 200px;
+  min-height: 200px;
   float: left;
   clip-path: circle();
   margin-right: 30px;
@@ -83,6 +84,7 @@ margin: 30px;
 .img-chillies {
   width: 30%;
   min-width: 200px;
+  min-height: 200px;
   margin-left: 30px;
   float:right;
 }
